// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesktopNavigation styles should render with secondary links 1`] = `
@media (max-width:959px) {
  .circuit-14 {
    display: none;
  }
}

.circuit-4 {
  position: fixed;
  z-index: 800;
  top: 49px;
  bottom: 0;
  left: 0;
  height: calc(100vh - 49px);
  width: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFF;
  padding-top: 12px;
  overflow-y: auto;
  box-shadow: 1px 0 #E6E6E6;
  -webkit-transition: width 120ms ease-in-out,box-shadow 120ms ease-in-out;
  transition: width 120ms ease-in-out,box-shadow 120ms ease-in-out;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.circuit-4:hover,
.circuit-4:focus-within {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  width: 220px;
}

.circuit-4::-webkit-scrollbar {
  display: none;
}

.circuit-3 {
  list-style: none;
}

.circuit-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  color: #3063E9;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:hover {
  background-color: #F5F5F5;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width:959px) {
  .circuit-2 {
    margin-bottom: 1px;
  }

  .circuit-2::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid #E6E6E6;
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width:960px) {
  .circuit-2 {
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-2:hover {
  background-color: #F0F6FF;
}

.circuit-0 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-1 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  font-weight: 700;
  max-width: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

@media (max-width:959px) {
  .circuit-1 {
    font-size: 24px;
    line-height: 28px;
  }
}

@media (min-width:960px) {
  .circuit-1 {
    max-width: 160px;
  }
}

.circuit-13 {
  position: -webkit-sticky;
  position: sticky;
  top: 49px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  background-color: #FFF;
  margin-left: 48px;
  height: calc(100vh - 49px);
  width: 200px;
  border-right: 1px solid #E6E6E6;
}

.circuit-5 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 18px;
  line-height: 24px;
  margin-bottom: 0;
  padding: 24px 16px 12px;
}

.circuit-12 {
  list-style: none;
}

.circuit-6 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 12px;
  color: #000;
  margin-bottom: 0;
  padding: 32px 16px 8px;
}

.circuit-11 {
  list-style: none;
}

.circuit-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  outline: none;
  color: #1A1A1A;
  background-color: #FFF;
  text-align: left;
  cursor: pointer;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 16px 24px;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.circuit-8:hover {
  background-color: #F5F5F5;
}

.circuit-8:active {
  background-color: #E6E6E6;
}

.circuit-8:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-8:focus::-moz-focus-inner {
  border: 0;
}

.circuit-8:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-8:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (min-width:960px) {
  .circuit-8 {
    padding: 12px 20px;
  }
}

.circuit-7 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
}

<div
  class="circuit-14"
>
  <nav
    aria-label="Primary"
    class="circuit-4"
  >
    <ul
      class="circuit-3"
      role="list"
    >
      <li>
        <a
          aria-current="page"
          class="circuit-2"
          data-focus-list="1"
          href="/shop"
        >
          <div
            class="circuit-0"
          >
            <svg
              fill="none"
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 7h15m-15 0L3.119 19.893A1 1 0 004.113 21h15.774a1 1 0 00.994-1.107L19.5 7m-15 0l3.201-3.659A1 1 0 018.454 3h7.092a1 1 0 01.753.341L19.5 7"
                stroke="currentColor"
                stroke-width="2"
              />
              <path
                d="M16 11a4 4 0 01-8 0"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <span
            class="circuit-1"
          >
            Shop
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <nav
    aria-label="Secondary"
    class="circuit-13"
  >
    <h2
      class="circuit-5"
    >
      Shop
    </h2>
    <ul
      class="circuit-12"
      role="list"
    >
      <li>
        <h3
          class="circuit-6"
        >
          For Kids
        </h3>
        <ul
          class="circuit-11"
          role="list"
        >
          <li>
            <a
              class="circuit-8"
              data-focus-list="2"
              href="/shop/toys"
            >
              <p
                class="circuit-7"
              >
                Toys
              </p>
            </a>
          </li>
          <li>
            <a
              class="circuit-8"
              data-focus-list="2"
              href="/shop/books"
            >
              <p
                class="circuit-7"
              >
                Books
              </p>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DesktopNavigation styles should render without secondary links 1`] = `
@media (max-width:959px) {
  .circuit-5 {
    display: none;
  }
}

.circuit-4 {
  position: fixed;
  z-index: 800;
  top: 49px;
  bottom: 0;
  left: 0;
  height: calc(100vh - 49px);
  width: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFF;
  padding-top: 12px;
  overflow-y: auto;
  box-shadow: 1px 0 #E6E6E6;
  -webkit-transition: width 120ms ease-in-out,box-shadow 120ms ease-in-out;
  transition: width 120ms ease-in-out,box-shadow 120ms ease-in-out;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.circuit-4:hover,
.circuit-4:focus-within {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  width: 220px;
}

.circuit-4::-webkit-scrollbar {
  display: none;
}

.circuit-3 {
  list-style: none;
}

.circuit-0 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:hover {
  background-color: #F5F5F5;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width:959px) {
  .circuit-2 {
    margin-bottom: 1px;
  }

  .circuit-2::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid #E6E6E6;
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width:960px) {
  .circuit-2 {
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-1 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  max-width: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

@media (max-width:959px) {
  .circuit-1 {
    font-size: 24px;
    line-height: 28px;
  }
}

@media (min-width:960px) {
  .circuit-1 {
    max-width: 160px;
  }
}

<div
  class="circuit-5"
>
  <nav
    aria-label="Primary"
    class="circuit-4"
  >
    <ul
      class="circuit-3"
      role="list"
    >
      <li>
        <a
          class="circuit-2"
          data-focus-list="3"
          href="/"
        >
          <div
            class="circuit-0"
          >
            <svg
              fill="none"
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 4.271l8 5.714v8.765c0 .69-.56 1.25-1.25 1.25H13v-6h-2v6H5.25C4.56 20 4 19.44 4 18.75V9.985l8-5.714zm-6 6.744V18h3v-6h6v6h3v-6.985l-6-4.286-6 4.286z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <span
            class="circuit-1"
          >
            Home
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
